# arcane

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  WHY_ARCANE.md  _f.txt  arcane-vault-builder.py
.claude/skills/arcane-development-workflow/: SKILL.md
.claude/skills/arcane-development-workflow/references/: merge-authority.md
.claude/skills/arcane-orchestrator/situations/: 3-merge-sub-pr.md
.claude/skills/arcane-vault-curation/: SKILL.md
.claude/skills/arcane-vault-curation/references/: content-reconciliation.md  journal-structure.md
.claude/skills/arcane-worker/references/: pr-conventions.md
.github/workflows/: claude-issue.yml
arcane-vault/: 00-INDEX.md  SCHEMA.md  timeline.md
arcane-vault/.obsidian/: graph.json  workspace.json
arcane-vault/conversations/: 2026-02-20 Specification implementation for concept demonstration.md  2026-02-20 Untitled Chat.md  2026-02-24 Unreal Engine networking library setup.md  2026-02-24 Unreal Engine setup for networking library.md  2026-02-24 Untitled Chat.md  2026-03-02 Network library architecture review.md  2026-03-03 Project documentation overview.md  2026-03-03 Untitled Chat.md  2026-03-06 Project repository status.md  2026-03-06 Standalone binary for Unreal Engine testing.md  2026-03-16 STATE_UPDATE message handling in ClusterServer.md  2026-03-28 CI pipeline failure in Arcane Scaling Benchmarks.md  2026-03-30 Benchmark improvement suggestions.md  2026-04-12 Project conversation export options.md  2026-04-12 Project directory exploration and analysis.md  2026-04-16 Claude Code session  pgp-demo.md  2026-04-18 Claude Code session  pgp-demo.md  unknown Claude Code session  e8dec835-2815-452e-81db-dbcda130475a.md
arcane-vault/entities/: AArcaneDemoCharacter.md  ABP_ArcaneEntity.md  ABP_Unarmed.md  ASpacetimeDBEntityDisplay.md  AWS Infrastructure.md  Affinity Clustering.md  Arcane Engine.md  ArcaneAdapterSubsystem.md  ArcaneClient Plugin.md  ArcaneDemo Module.md  ArcaneDemo.md  ArcaneEntityDisplay.md  AwsArcanePerHost Topology.md  AwsHelpers.ps1.md  AwsSpacetimeOnly Topology.md  Benchmark Journal.md  Benchmark State JSON.md  Benchmark System.md  BenchmarkHarnessHelpers.md  BenchmarkMode.md  BenchmarkSimulation.md  CI Pipeline.md  CLAUDE.md Context File.md  Cleanup-AwsBenchmark.ps1.md  ClusterManager.md  ClusterServer.md  ClusterSimulation.md  DEMO_GOAL.md.md  Dynamic Material Logic.md  EntityStateDelta.md  EntityStateEntry.md  Five Connection Types.md  Four-Bucket Data Model.md  Four-Bucket State Model.md  GHCR Benchmark Image.md  GHCR Benchmark Images.md  Grafana Dashboard.md  Heterogeneous Node Tiers.md  Hysteresis Thresholds.md  IClusteringModel.md  (+59 more)
crates/arcane-affinity/: Cargo.toml
crates/arcane-affinity/src/: cold_pair.rs  config.rs  feature_map.rs  hysteresis.rs  interaction_graph.rs  lib.rs  objective.rs  partition.rs  predictor.rs  rate_field.rs  refinement.rs  region.rs  scorer.rs  staleness_bench.rs  warm_start.rs
crates/arcane-affinity/tests/: partition_scale.rs
crates/arcane-core/: Cargo.toml
crates/arcane-core/src/: cluster_simulation.rs  clustering_model.rs  lib.rs  persistence.rs  physics_events.rs  replication_channel.rs  server_pool.rs  types.rs  visibility.rs  world_simulator.rs
crates/arcane-infra/: Cargo.toml
crates/arcane-infra/examples/: migration_observer.rs  ws_cluster_probe.rs
crates/arcane-infra/src/: broadcast_channel_cap.rs  cluster_manager.rs  cluster_runner.rs  cluster_server.rs  cluster_stats.rs  convergence.rs  fixed_timestep.rs  forwarded_inputs.rs  lib.rs  manager.rs  manager_runtime.rs  neighbor_subscriber.rs  node.rs  node_core.rs  node_inbox.rs  node_runner.rs  node_stats.rs  ownership_migration.rs  parking.rs  persistence_config.rs  physics_events_channel.rs  rapier_cluster.rs  redis_channel.rs  replication_channel_manager.rs  replication_gate.rs  router_core.rs  routing_table.rs  rpc_handler.rs  spacetimedb_persist.rs  startup.rs  state_keys.rs  tick_rate.rs  ws_server.rs
crates/arcane-infra/tests/: arcane_node_determinism.rs  cluster_manager_tests.rs  cluster_server_tests.rs  decision_execution_tests.rs  e2e_control_loop.rs  growth_stability.rs  integration_tests.rs  manager_graph_brain.rs  manager_scale.rs  manager_tests.rs  migration_tests.rs  multiprocess_e2e.rs  node_tests.rs  parking_tests.rs  physics_edges.rs  predictive_migration.rs  replication_channel_manager_tests.rs  rpc_handler_tests.rs  stability.rs
crates/arcane-pool/: Cargo.toml
crates/arcane-pool/src/: lib.rs  local_pool.rs
crates/arcane-pool/tests/: local_pool_tests.rs
crates/arcane-rules/: Cargo.toml
crates/arcane-rules/src/: lib.rs  rules_engine.rs
crates/arcane-rules/tests/: rules_engine_tests.rs
crates/arcane-spatial/: Cargo.toml
crates/arcane-spatial/benches/: spatial_grid_bench.rs
crates/arcane-spatial/src/: index.rs  lib.rs  radius_visibility_filter.rs
crates/arcane-spatial/tests/: spatial_index_tests.rs
crates/arcane-wire/: Cargo.toml
crates/arcane-wire/schema/: arcane_wire.fbs
crates/arcane-wire/src/: lib.rs
docs/: MODULE_INTERACTIONS.md  SYSTEM_ARCHITECTURE.md  WS_CHANNEL_BACKPRESSURE_VALIDATION.md  arcane-platform-primitives.md
docs/architecture/: README.md  clustering-system-requirements.md  component-index.md  connection-types.md  entity-model.md  four-bucket-state-model.md  interaction-edge-taxonomy.md  interface-iclusteringmodel.md  interface-ireplicationchannel.md  interface-iserverpool.md  interface-iworldsimulator.md  meta-control-layer.md  module-arcane-manager.md  module-arcane-node.md  module-cluster-manager.md  module-cluster-server.md  module-replication-channel-manager.md  module-rpc-handler.md  module-rules-engine.md  module-spatial-index.md  physics-backends-and-unreal.md  progressive-api.md
docs/architecture/adr/: 001-rapier-cluster-integration-shape.md  002-cross-cluster-physics.md  004-global-partitioning-and-ml-seams.md  005-tick-domains-and-flip-semantics.md  README.md
scripts/: hl_matrix.bat  hl_restart_node2.bat  hl_run.bat  hl_speed_sweep.bat  hl_stack.bat  viz_scenarios.bat
