[package]
name = "arcane-infra"
version = "0.1.0"
edition = "2021"
description = "Arcane Engine — ClusterManager, ClusterServer, ReplicationChannelManager, RPCHandler (IN-01, 02, 05, 06)"

[dependencies]
arcane-core = { path = "../arcane-core" }
arcane-spatial = { path = "../arcane-spatial" }
arcane-rules = { path = "../arcane-rules" }
arcane-pool = { path = "../arcane-pool" }
axum = { version = "0.7", optional = true }
futures-util = { version = "0.3", optional = true }
redis = "0.27"
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"], optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["cluster-ws"]
manager = ["dep:axum", "dep:tokio"]
cluster-ws = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]
spacetimedb-persist = ["dep:reqwest"]

[[bin]]
name = "arcane-cluster"
path = "src/bin/arcane_cluster.rs"
required-features = ["cluster-ws"]

[[bin]]
name = "arcane-manager"
path = "src/bin/arcane_manager.rs"
required-features = ["manager"]

[dev-dependencies]
redis = "0.27"
