[package]
name = "arcane-infra"
version = "0.1.0"
edition = "2021"
description = "Arcane Engine — ClusterManager, ClusterServer, ReplicationChannelManager, RPCHandler (IN-01, 02, 05, 06)"

[dependencies]
arcane-core = { path = "../arcane-core" }
arcane-spatial = { path = "../arcane-spatial" }
arcane-rules = { path = "../arcane-rules" }
arcane-affinity = { path = "../arcane-affinity", optional = true }
arcane-pool = { path = "../arcane-pool" }
arcane-wire = { path = "../arcane-wire" }
axum = { version = "0.7", optional = true }
futures-util = { version = "0.3", optional = true }
rayon = { version = "1", optional = true }
rapier3d = { version = "0.32", optional = true }
redis = "0.27"
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"], optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["cluster-ws"]
manager = ["dep:axum", "dep:tokio"]
cluster-ws = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:rayon"]
spacetimedb-persist = ["dep:reqwest"]
affinity-clustering = ["dep:arcane-affinity"]
rapier-cluster = ["cluster-ws", "dep:rapier3d"]

[[bin]]
name = "arcane-cluster"
path = "src/bin/arcane_cluster.rs"
required-features = ["cluster-ws"]

[[bin]]
name = "arcane-manager"
path = "src/bin/arcane_manager.rs"
required-features = ["manager"]

[[bin]]
name = "arcane-rapier-cluster"
path = "src/bin/arcane_rapier_cluster.rs"
required-features = ["rapier-cluster"]

[dev-dependencies]
redis = "0.27"
