[package]
name = "arcane-infra"
version = "0.4.0"
edition = "2021"
description = "Arcane Engine — ArcaneManager, ArcaneNode, ReplicationChannelManager, RPCHandler (IN-01, 02, 05, 06)"

[dependencies]
arcane-core = { path = "../arcane-core" }
arcane-spatial = { path = "../arcane-spatial" }
arcane-rules = { path = "../arcane-rules" }
arcane-affinity = { path = "../arcane-affinity", optional = true }
arcane-pool = { path = "../arcane-pool" }
arcane-wire = { path = "../arcane-wire" }
axum = { version = "0.7", optional = true }
dashmap = { version = "5.5", optional = true }
futures-util = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }
rayon = { version = "1", optional = true }
rapier3d = { version = "0.32", optional = true }
redis = "0.27"
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"], optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["cluster-ws"]
manager = ["dep:axum", "dep:tokio"]
cluster-ws = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:rayon", "dep:libc", "dep:dashmap"]
spacetimedb-persist = ["dep:reqwest"]
affinity-clustering = ["dep:arcane-affinity"]
migration = ["affinity-clustering"]
rapier-cluster = ["cluster-ws", "dep:rapier3d"]

[[bin]]
name = "arcane-node"
path = "src/bin/arcane_node.rs"
required-features = ["cluster-ws"]

[[bin]]
name = "arcane-manager"
path = "src/bin/arcane_manager.rs"
required-features = ["manager", "migration"]

[[bin]]
name = "arcane-rapier-node"
path = "src/bin/arcane_rapier_node.rs"
required-features = ["rapier-cluster"]

[dev-dependencies]
redis = "0.27"
tungstenite = "0.21"
